Full search without security done.