@@ -4,26 +4,37 @@ import com.asledz.kancelaria_prawnicza.domain.Document;
 import com.asledz.kancelaria_prawnicza.domain.File;
 import com.asledz.kancelaria_prawnicza.domain.Type;
 import com.asledz.kancelaria_prawnicza.dto.DocumentDTO;
+import com.asledz.kancelaria_prawnicza.dto.FilterAndSortParameters;
+import com.asledz.kancelaria_prawnicza.exception.BadRequestException;
 import com.asledz.kancelaria_prawnicza.exception.NotFoundException;
 import com.asledz.kancelaria_prawnicza.mapper.DTOMapper;
 import com.asledz.kancelaria_prawnicza.repository.DocumentRepository;
 import com.asledz.kancelaria_prawnicza.specification.CustomSpecification;
 import com.asledz.kancelaria_prawnicza.specification.SearchCriteria;
+import com.asledz.kancelaria_prawnicza.utilis.QueriesGenerator;
 import com.asledz.kancelaria_prawnicza.utilis.SearchUtils;
+import com.asledz.kancelaria_prawnicza.utilis.SortGenerator;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.lucene.search.Query;
+import org.apache.lucene.search.SortField;
 import org.hibernate.search.jpa.FullTextEntityManager;
 import org.hibernate.search.jpa.FullTextQuery;
 import org.hibernate.search.jpa.Search;
+import org.hibernate.search.query.dsl.BooleanJunction;
 import org.hibernate.search.query.dsl.QueryBuilder;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.util.MultiValueMap;
 
 import javax.persistence.EntityManager;
 import javax.transaction.Transactional;
 import java.util.List;
+import java.util.Map;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -32,39 +43,36 @@ import java.util.List;
 public class DocumentService {
     private final EntityManager entityManager;
     private final DocumentRepository documentRepository;
-
+    private final TypeService typeService;
     private final DTOMapper<Document, DocumentDTO> mapper;
     private final SearchUtils searchUtils;
 
     protected static final String DOCUMENT_NOT_FOUND_MSG = "Couldn't find document with id: %d";
 
 
-    public Page<DocumentDTO> getDocuments(Integer page) {
+    public Page<DocumentDTO> getDocuments(Map<String, String> pageProperties) {
+        int page = Integer.parseInt(pageProperties.get("page")) - 1;
+        pageProperties.remove("page");
         log.info("Page %d of all documents".formatted(page));
-        int pageSize = 5;
-        page -= 1;
-        Pageable paging = PageRequest.of(page, pageSize);
-        Page<Document> documentPage = documentRepository.findAll(paging);
-
-        if (searchUtils.iSearchPossibleOrAlreadyFilteredByAnalyzer(File.class, "text", "adwokat")) {
-            FullTextEntityManager fullTextEntityManager
-                    = Search.getFullTextEntityManager(entityManager);
-            QueryBuilder queryBuilder = searchUtils.getQueryBuilder(fullTextEntityManager, File.class);
-            FullTextQuery fullTextQuery = fullTextEntityManager.createFullTextQuery(
-                    queryBuilder
-                            .keyword()
-                            .fuzzy()
-                            .withEditDistanceUpTo(2)
-                            .withPrefixLength(1)
-                            .onFields("text") //"document.title"
-                            .matching("wniosek")
-                            .createQuery(),
-                    File.class);
-            @SuppressWarnings("unchecked")
-            List<File> files = fullTextQuery.getResultList();
-            files.forEach(file -> log.info("Z fulltextSearch: " + file.getDocument().getId()));
+        int pageSize = Integer.parseInt(pageProperties.get("pageSize"));
+        pageProperties.remove("pageSize");
+        Pageable paging;
+        if (pageProperties.size() > 0) {
+            List<Sort> sortList = SortGenerator.getSortsFromMap(pageProperties);
+            Sort result;
+            if (sortList.isEmpty()) {
+                result = Sort.by("id").descending();
+            } else {
+                result = sortList.get(0);
+                for (int i = 1; i < sortList.size(); i++) {
+                    result.and(sortList.get(i));
+                }
+            }
+            paging = PageRequest.of(page, pageSize, result);
+        } else {
+            paging = PageRequest.of(page, pageSize, Sort.by(Sort.Direction.DESC, "id"));
         }
-
+        Page<Document> documentPage = documentRepository.findAll(paging);
         return documentPage.map(mapper::map);
     }
 
@@ -82,7 +90,7 @@ public class DocumentService {
                 userId));
         int pageSize = 5;
         page -= 1;
-        Pageable paging = PageRequest.of(page, pageSize);
+        Pageable paging = PageRequest.of(page, pageSize, Sort.by("id"));
         Page<Document> documentPage = documentRepository.findAll(documentsByUserId, paging);
         return documentPage.map(mapper::map);
     }
@@ -94,7 +102,7 @@ public class DocumentService {
                 typeId));
         int pageSize = 5;
         page -= 1;
-        Pageable paging = PageRequest.of(page, pageSize);
+        Pageable paging = PageRequest.of(page, pageSize, Sort.by("id"));
         Page<Document> documentPage = documentRepository.findAll(documentsByUserId, paging);
         return documentPage.map(mapper::map);
     }
@@ -106,36 +114,132 @@ public class DocumentService {
                 tagId));
         int pageSize = 5;
         page -= 1;
-        Pageable paging = PageRequest.of(page, pageSize);
+        Pageable paging = PageRequest.of(page, pageSize, Sort.by("id"));
         Page<Document> documentPage = documentRepository.findAll(documentsByUserId, paging);
         return documentPage.map(mapper::map);
     }
 
-    //TODO Tutaj trzeba użyć MultipartFile i przez fulltextsearch wczytać z niego wszystkie dane zamiast DTO.
-    public DocumentDTO addDocument(DocumentDTO newDocumentInformation) {
-        log.info("Adding Document:" + newDocumentInformation);
-        Type type = Type.builder()
-                .name(newDocumentInformation.typeName())
-                .build();
-        File file = File.builder()
-                .extension("test")
-                .build();
-        Document document = Document.builder()
-                .title(newDocumentInformation.title())
-                .date(newDocumentInformation.date())
-                .cost(newDocumentInformation.cost())
-                .paid(newDocumentInformation.paid())
-                .cost(newDocumentInformation.cost())
-                .type(type)
-                .tags(List.of())
-                .file(file).build();
-        return mapper.map(documentRepository.save(document));
+    public Page<DocumentDTO> getDocumentsByText(Integer page, String prompt) {
+        log.info("Page %d of all documents".formatted(page));
+        int pageSize = 5;
+        page -= 1;
+        Pageable paging = PageRequest.of(page, pageSize, Sort.by("id"));
+        Page<Document> documentPage;
+        if (searchUtils.iSearchPossibleOrAlreadyFilteredByAnalyzer(File.class, "text", prompt)) {
+            FullTextEntityManager fullTextEntityManager
+                    = Search.getFullTextEntityManager(entityManager);
+            QueryBuilder queryBuilder = searchUtils.getQueryBuilder(fullTextEntityManager, File.class);
+            Query textQuery = queryBuilder
+                    .keyword()
+                    .fuzzy()
+                    .withEditDistanceUpTo(2)
+                    .withPrefixLength(1)
+                    .onFields("text") //"document.title"
+                    .matching(prompt)
+                    .createQuery();
+            FullTextQuery fullTextQuery = fullTextEntityManager.createFullTextQuery(textQuery,
+                            File.class)
+                    .setFirstResult(pageSize * page)
+                    .setMaxResults(pageSize);
+            @SuppressWarnings("unchecked")
+            List<File> files = fullTextQuery.getResultList();
+            documentPage = new PageImpl<>(files.stream().map(File::getDocument).toList(), paging, fullTextQuery.getResultSize());
+        } else {
+            throw new BadRequestException("Couldn't use hibernate search on text field with given prompt: %s".formatted(prompt));
+        }
+        return documentPage.map(mapper::map);
     }
 
-    public DocumentDTO updateDocument(DocumentDTO updatedDocumentInformation, Long id) {
-        log.info("Updating document with id: %d".formatted(id));
-        Document oldDocument = documentRepository.findById(id).orElseThrow(
-                () -> new NotFoundException(String.format(DOCUMENT_NOT_FOUND_MSG, id)));
+    public Page<DocumentDTO> getDocumentsByTypeAndText(Integer page, String prompt) {
+        log.info("Page %d of all documents".formatted(page));
+        int pageSize = 5;
+        page -= 1;
+        Pageable paging = PageRequest.of(page, pageSize, Sort.by("id"));
+        Page<Document> documentPage;
+        if (searchUtils.iSearchPossibleOrAlreadyFilteredByAnalyzer(File.class, "text", "adwokat")) {
+            FullTextEntityManager fullTextEntityManager
+                    = Search.getFullTextEntityManager(entityManager);
+            QueryBuilder queryBuilder = searchUtils.getQueryBuilder(fullTextEntityManager, File.class);
+            Query textQuery = queryBuilder
+                    .keyword()
+                    .fuzzy()
+                    .withEditDistanceUpTo(2)
+                    .withPrefixLength(1)
+                    .onFields("text") //"document.title"
+                    .matching(prompt)
+                    .createQuery();
+            Query typeQuery = queryBuilder
+                    .keyword()
+                    .onField("type")
+                    .matching("type")
+                    .createQuery();
+            Query combinedQuery = queryBuilder
+                    .bool()
+                    .must(typeQuery)
+                    .must(textQuery)
+                    .createQuery();
+            FullTextQuery fullTextQuery = fullTextEntityManager.createFullTextQuery(combinedQuery,
+                            File.class)
+                    .setFirstResult(pageSize * page)
+                    .setMaxResults(pageSize);
+            @SuppressWarnings("unchecked")
+            List<File> files = fullTextQuery.getResultList();
+            documentPage = new PageImpl<>(files.stream().map(File::getDocument).toList(), paging, fullTextQuery.getResultSize());
+        } else {
+            throw new BadRequestException("Couldn't use hibernate search on text field with given prompt: %s".formatted(prompt));
+        }
+
+        return documentPage.map(mapper::map);
+    }
+
+    public Page<DocumentDTO> getDocumentsByParameters(MultiValueMap<String, String> parameters) {
+        int page = 0;
+        if (parameters.containsKey("page")) {
+            page = Integer.parseInt(parameters.get("page").get(0)) - 1;
+            parameters.remove("page");
+        }
+        log.info("Page %d of all documents".formatted(page));
+        int pageSize = 5;
+        if (parameters.containsKey("pageSize")) {
+            pageSize = Integer.parseInt(parameters.get("pageSize").get(0));
+            parameters.remove("pageSize");
+        }
+        log.info(parameters.toString());
+        Pageable paging = PageRequest.of(page, pageSize);
+        Page<Document> documentPage;
+        FullTextEntityManager fullTextEntityManager = Search.getFullTextEntityManager(entityManager);
+        QueryBuilder queryBuilder = searchUtils.getQueryBuilder(fullTextEntityManager, File.class);
+        FilterAndSortParameters filterAndSortParameters = QueriesGenerator.extractQueriesFromMultiMap(queryBuilder, searchUtils, parameters);
+        if (filterAndSortParameters.filterQueries().isEmpty()) {
+            throw new BadRequestException("Can't use filtering without any parameters. " + parameters);
+        }
+        BooleanJunction<BooleanJunction> booleanJunction = queryBuilder.bool();
+        filterAndSortParameters.filterQueries().forEach(booleanJunction::must);
+        Query combinedQuery = booleanJunction.createQuery();
+        FullTextQuery fullTextQuery = fullTextEntityManager.createFullTextQuery(combinedQuery,
+                        File.class)
+                .setFirstResult(pageSize * page)
+                .setMaxResults(pageSize);
+        if (!filterAndSortParameters.sortFields().isEmpty()) {
+            List<SortField> sortFields = filterAndSortParameters.sortFields();
+            org.apache.lucene.search.Sort sort = new org.apache.lucene.search.Sort(sortFields.toArray(new SortField[0]));
+            fullTextQuery.setSort(sort);
+        }
+        @SuppressWarnings("unchecked")
+        List<File> files = fullTextQuery.getResultList();
+        documentPage = new PageImpl<>(files.stream().map(File::getDocument).toList(), paging, fullTextQuery.getResultSize());
+        return documentPage.map(mapper::map);
+    }
+
+    public DocumentDTO updateDocument(DocumentDTO updatedDocumentInformation, Long documentId) {
+        log.info(updatedDocumentInformation.date().toString());
+        log.info("Updating document with id: %d".formatted(documentId));
+        Document oldDocument = documentRepository.findById(documentId).orElseThrow(
+                () -> new NotFoundException(String.format(DOCUMENT_NOT_FOUND_MSG, documentId)));
+        if (updatedDocumentInformation.typeId() > 0) {
+            Type type = typeService.getTypeById(updatedDocumentInformation.typeId());
+            oldDocument.setType(type);
+        }
         oldDocument.setTitle(updatedDocumentInformation.title());
         oldDocument.setDate(updatedDocumentInformation.date());
         oldDocument.setCost(updatedDocumentInformation.cost());
